# libatgpio

./: .gitignore  Makefile.am  README.md  configure.ac
patches/: a840-disable-unconditional-gpio-key.patch
samples/: a840-sw.c
src/: atgpio.c  atgpio.h
